--- a/style.css
+++ b/style.css
@@ -179,3 +179,10 @@ h2 {
 }
 
 /*footer*/
+footer {
+  background-color: #1f2937;
+  color: rgb(212, 212, 212);
+  text-align: center;
+  padding: 25px 0;
+  font-size: 12px;
+}
